# ryve

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RYVE.md  build.rs  build_vendored_tmux_support.rs  lefthook.yml  perf-budgets.toml  rustfmt.toml
.forge/: config.toml
.forge/context/: AGENTS.md
.github/workflows/: ci.yml  perf.yml
.ryve/: WORKSHOP.md  config.toml  sparks.db-shm  sparks.db-wal  ui_state.json
.ryve/backups/: sparks.db.20260415-125306.bak
.ryve/checklists/: DONE.md
data/: Cargo.toml
data/benches/: agent_context_sync.rs
data/migrations/: 001_create_sparks_tables.sql  005_crew_status_fields.sql  006_track_agent_session_pid.sql  008_track_agent_session_log_path.sql  009_agent_session_parent.sql  011_releases.sql  012_unsorted_epic_reparent.sql  013_assignments.sql  013_create_assignments.sql  013_hand_assignment_to_assignment.sql  014_assignment_phase_columns.sql  014_event_outbox.sql  015_consolidate_assignments_phase_tracking.sql  015_hand_assignments_view_phase_columns.sql  016_agent_session_archetype.sql  017_watches.sql  018_hand_assignments_view.sql  019_assignment_heartbeat.sql  019_irc_messages.sql  020_irc_outbox_state.sql  021_github_mirror.sql
data/src/: agent_context.rs  backup.rs  config.rs  db.rs  forge_dir.rs  git.rs  lib.rs  migrations.rs  pre_merge_validator.rs  release_branch.rs  release_version.rs  ryve_dir.rs  unsplash.rs
data/src/github/: applier.rs  mod.rs  orphan_scan.rs  poller.rs  rate_limit.rs  sync.rs  translator.rs  types.rs
data/src/sparks/: agent_session_repo.rs  alloy_repo.rs  assign_repo.rs  assignment_repo.rs  assignment_state_machine.rs  bond_repo.rs  comment_repo.rs  commit_link_repo.rs  constraint_helpers.rs  contract_repo.rs  crew_repo.rs  delegation_trace_repo.rs  ember_repo.rs  engraving_repo.rs  error.rs  event_repo.rs  file_link_repo.rs  graph.rs  heartbeat.rs  heartbeat_watchdog.rs  id.rs  irc_repo.rs  mod.rs  open_tab_repo.rs  projector.rs  relay.rs  release_repo.rs  spark_repo.rs  stamp_repo.rs  transition.rs  types.rs  watch_repo.rs  watch_runner.rs
data/tests/: agent_session_archetype.rs  alloy_ops.rs  assignment_crud.rs  assignment_migration.rs  backup_corrupt_restore.rs  backup_ops.rs  bond_crud.rs  concurrency_stress.rs  cycle_detection.rs  delegation_trace_ops.rs  ember_ops.rs  engraving_ops.rs  github_applier.rs  github_orphan_scan.rs  github_poller_rate_limit.rs  heartbeat_watchdog.rs  hot_query.rs  irc_repo.rs  outbox_relay.rs  pre_merge_validator.rs  projector_replay.rs  release_branch_ops.rs  release_crud.rs  release_edit.rs  release_lifecycle.rs  spark_crud.rs  stuck_override.rs  transition_phase.rs  unsorted_epic_migration.rs
data/tests/fixtures/: seed_sparks.sql
docs/: AGENT_HIERARCHY.md  ARCHITECTURE.md  ATLAS.md  DELEGATION_CONTRACTS.md  HAND_ARCHETYPES.md  HAND_CAPABILITIES.md  HEAD_ARCHETYPES.md  HEAD_HOWTO.md  RECOVERY.md  RELEASES.md  RELEASE_0.1.0.md  SPARKS.md  VENDORED_TMUX.md  WORKGRAPH.md  WRITE_DISCIPLINE.md
docs/heads/: perf_head_e2e_report.md
docs/spikes/: atlas-personalization.md
fixtures/github/: check_run_completed.json  check_run_completed_failure.json  check_run_in_progress.json  issue_comment_on_issue.json  issue_comment_on_pr.json  pull_request_closed_merged.json  pull_request_closed_unmerged.json  pull_request_edited.json  pull_request_opened.json  pull_request_reopened.json  pull_request_review_approved.json  pull_request_review_changes_requested.json  pull_request_review_commented.json  pull_request_synchronize.json  push_event.json
fixtures/multi-lang/: README.md  app.go  app.py  app.ts
ipc/: Cargo.toml
ipc/src/: channel_manager.rs  irc_client.rs  irc_command_parser.rs  irc_renderer.rs  lib.rs  outbox_relay.rs  signal_discipline.rs
ipc/tests/: channel_manager.rs  irc_client.rs  irc_golden_rule.rs  outbox_relay.rs
llm/: Cargo.toml
llm/proto/: Cargo.toml
llm/proto/src/: lib.rs
llm/src/: client.rs  lib.rs
perf_core/: Cargo.toml
perf_core/benches/: perf.rs
perf_core/src/: lib.rs
perf_core/tests/: sparks_poll_smoke.rs
scripts/: build-vendored-tmux.sh  check-sparks-db-not-tracked.sh  e2e_perf_head_replay.sh  perf-gate.py
src/: agent_prompts.rs  app.rs  bundled_tmux.rs  cli.rs  coding_agents.rs  delegation.rs  font_intern.rs  hand_archetypes.rs  hand_spawn.rs  head_archetype.rs  head_archetypes.rs  icons.rs  main.rs  panel_state.rs  process_snapshot.rs  release_artifact.rs  sparks_filter.rs  style.rs  tmux.rs  watch_runner.rs  workshop.rs  worktree_cleanup.rs
src/head/: mod.rs  orchestrator.rs
src/head_templates/: atlas_watch.md  perf_head.md
src/screen/: agents.rs  background_picker.rs  bench.rs  close_workshop_dialog.rs  delegation_trace.rs  ember_bar.rs  file_explorer.rs  file_viewer.rs  head_picker.rs  home.rs  intent_list_editor.rs  log_tail.rs  mod.rs  releases.rs  spark_detail.rs  spark_picker.rs  sparks.rs  status_bar.rs  toast.rs
src/widget/: badge.rs  mod.rs  splitter.rs
tests/: archetype_language_agnostic.rs  architect_hand.rs  atlas_watch_e2e.rs  bug_hunter_hand.rs  concurrent_cli_writers.rs  hand_heartbeat_loop.rs  investigator_hand.rs  no_tracked_sparks_db.rs  performance_engineer_hand.rs  release_e2e.rs  release_edit_cli.rs  release_manager_hand.rs  spark_create_parent_cli.rs  sweep_stalls_cli.rs  tmux_integration.rs  tmux_lifecycle.rs  vendored_tmux_stamp.rs  watch_cli.rs  watch_duplicate_suppression.rs  watch_runner.rs
