[workspace]
members = [
    "data",
    "ipc",
    "llm",
    "llm/proto",
    "perf_core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Loomantix <hello@loomantix.com>"]
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/loomantix/ryve"

[package]
name = "ryve"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A new-era IDE where you manage threads with LLMs"
default-run = "ryve"

[[bin]]
name = "ryve"
path = "src/main.rs"

[dependencies]
data = { path = "data" }
ipc = { path = "ipc" }
llm = { path = "llm" }
perf_core = { path = "perf_core" }

chrono = { version = "0.4", features = ["serde"] }
dark-light = "2"
dirs = "6"
fern = "0.7"
futures = "0.3"
iced = { version = "0.14", features = ["tokio", "image", "canvas", "lazy", "advanced", "svg"] }
image = "0.25"
log = "0.4"
once_cell = "1"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process"] }
uuid = { version = "1", features = ["v4", "serde"] }
iced_term = "0.8.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
rfd = "0.17.2"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-onig"] }
arboard = "3"

[build-dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]

[target.'cfg(target_os = "macos")'.dependencies]

[profile.release]
lto = true
strip = true

[profile.release-package]
inherits = "release"
opt-level = "z"
strip = true
lto = true

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
todo = "deny"

[patch.crates-io]
iced_term = { path = "vendor/iced_term" }
