[package]
name = "data"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ryve data layer: persistence, config, and git operations"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
futures = "0.3"
log = "0.4"
octocrab = "0.49"
petgraph = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "process"] }
toml = "1.1.2"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["fs", "process", "macros", "rt"] }
