[package]
name = "llm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Forge LLM integration: multi-provider support via genai"

[dependencies]
llm-proto = { path = "proto" }

futures = "0.3"
genai = "0.5"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
