[package]
name = "perf_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure, benchmarkable hot-path helpers for Ryve. Owned by the perf regression harness."

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
data = { path = "../data" }
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "perf"
harness = false
